--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "item-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://alialkaheli.github.io/item-project",
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
@@ -27,5 +28,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
