--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "item-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://alialkaheli.github.io/item-project",
+  "homepage": "http://alialkaheli.github.io/items-project",
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "lodash": "^4.17.15",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "^3.2.0",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
